--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.devtools.restart.additional-paths=src/main/java
 ###Redis数据库索引（默认为0）
 spring.redis.database=0
 ###Redis服务器地址
-spring.redis.host=192.168.1.191
+spring.redis.host=172.18.18.203
 ###Redis服务器连接端口
-spring.redis.port=6379
+spring.redis.port=16379
 ###Redis服务器连接密码（默认为空）
 spring.redis.password=
 ###连接池最大连接数（使用负值表示没有限制）
@@ -45,7 +45,7 @@ spring.redis.timeout=0
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://localhost:3306/db_mrliu
+spring.datasource.url=jdbc:mysql://172.18.18.203:23306/db_mrliu
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
