change path of resoruce

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8001
-
+#spring.mvc.static-path-pattern=/static
 ###热部署生效
 spring.devtools.restart.enabled=true
 ###设置重启的目录,添加那个目录的文件需要restart
