--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ spring.thymeleaf.content-type=text/html
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://172.18.18.203:23306/db_mrliu?useUnicode=true&characterEncoding=utf-8
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_mrliu
+#spring.datasource.url=jdbc:mysql://172.18.18.203:23306/db_mrliu?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/db_mrliu?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -84,6 +84,7 @@ spring.datasource.druid.stat-view-servlet.allow=true
 #mapper.mappers=com.mrliu.support.dao.MyMapper.java
 mapper.not-empty=false
 mapper.identity=MYSQL
+
 ###分页插件配置
 #pagehelper.helperDialect=mysql
 #pagehelper.reasonable=true
