--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,10 +86,10 @@ mapper.not-empty=false
 mapper.identity=MYSQL
 
 ###分页插件配置
-#pagehelper.helperDialect=mysql
-#pagehelper.reasonable=true
-#pagehelper.supportMethodsArguments=true
-#pagehelper.params=count=countSql
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 
 ############################################################
