--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
 		</dependency>
 		
 <!-- 		引入log4j日志依赖 -->
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-log4j</artifactId>
-		    <version>1.3.8.RELEASE</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.springframework.boot</groupId> -->
+<!-- 		    <artifactId>spring-boot-starter-log4j</artifactId> -->
+<!-- 		    <version>1.3.8.RELEASE</version> -->
+<!-- 		</dependency> -->
 		
 <!-- 		引入 spring aop 依赖  -->
 		<dependency>
