change config and add mybatic config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ spring.thymeleaf.content-type=text/html
 # 配置数据源相关	使用阿里巴巴的 druid 数据源
 #
 ############################################################
-#spring.datasource.url=jdbc:mysql://172.18.18.203:23306/db_mrliu?useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://localhost:3306/db_mrliu?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://172.18.18.203:23306/db_mrliu?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_mrliu?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -82,6 +82,10 @@ spring.datasource.druid.stat-view-servlet.allow=true
 ###通用 Mapper 配置
 ###通用类
 #mapper.mappers=com.mrliu.support.dao.MyMapper.java
+
+### 打印sql语句
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
 mapper.not-empty=false
 mapper.identity=MYSQL
 
